добавил строки в комплектации

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -7,7 +7,7 @@ html
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(charset="utf-8")
         title.
-            Бани-бочки под ключ
+            Бани-бочки под ключ по всей России
     body
         .fixed-header
             .container
@@ -140,20 +140,20 @@ html
                         td
                             |Общая длина
                         td
-                            |200 см
+                            |210 см
                         td
-                            |200 см
+                            |210 + 50 см (козырёк)
                         td
-                            |200 см
+                            |200 + 70 см (крыльцо)
                     tr
                         td
                             |Длина парной
                         td
-                            |200 см
+                            |180 см
                         td
-                            |200 см
+                            |180 см
                         td
-                            |200 см
+                            |180 см
                     tr
                         td
                             |Диаметр
@@ -167,11 +167,11 @@ html
                         td
                             |Материал
                         td
-                            |дуб
+                            |чистая ель <br>влажностью 15%
                         td
-                            |дуб
+                            |чистая ель <br>влажностью 15%
                         td
-                            |дуб
+                            |чистая ель <br>влажностью 15%
                 .catalog__diff
                     span
                         |Нажмите для просмотра комплектации:
@@ -183,7 +183,97 @@ html
                         td
                     tr
                         td
-                            |Печь
+                            |Финская печь HARVIA (электрическая/дровяная) на выбор
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Бак для воды на 55л
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |2 лежака из осины в парильной
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Трапик из осины в парильной
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Комплект электрики и освещения
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Защита от нагрева из минерита
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Обручи из нержавеющей стали с замками для стягивания
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Крыша из гибкой финской черепицы (цвет по желанию клиента)
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Снаружи пропитана BELINKA в два слоя(цвет по желанию клиента)
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Ступенька перед входом
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |2 скамейки и трапик из осины в раздевалке
                         td
                             span.compare__decline
                         td
@@ -192,13 +282,60 @@ html
                             span.compare__accept
                     tr
                         td
-                            |Бак
-                        td
-                            span.compare__accept
-                        td
-                            span.compare__accept
+                            |Вешалка для одежды в раздевалке
                         td
                             span.compare__decline
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |2 скамейки и трапик из осины в комнате отдыха
+                        td
+                            span.compare__decline
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Столик и вешалка для одежды в комнате отдыха
+                        td
+                            | есть
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Трапик из осины в помывочной
+                        td
+                            span.compare__decline
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            | 2 скамейки и трапик на крыльце
+                        td
+                            span.compare__decline
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+                    tr
+                        td
+                            |Бесплатная доставка
+                        td
+                            span.compare__decline
+                        td
+                            span.compare__accept
+                        td
+                            span.compare__accept
+
+
                 table.catalog__table
                     tr
                         td
@@ -210,23 +347,23 @@ html
                             |Цена под ключ
                         td
                             small
-                                |99 900 р.
+                                |89 900 р.
                             b
-                                |79 900 р.
+                                |78 900 р.
                             a.button.open-modal(href="#callback" data-theme="Заказать мини")
                                 |Заказать
                         td
                             small
-                                | 99 900 р.
+                                | 94 900 р.
                             b
-                                | 79 900 р.
+                                | 82 900 р.
                             a.button.open-modal(href="#callback" data-theme="Заказать мини")
                                 | Заказать
                         td
                             small
                                 | 99 900 р.
                             b
-                                | 79 900 р.
+                                | 90 900 р.
                             a.button.open-modal(href="#callback" data-theme="Заказать мини")
                                 | Заказать
                 table.catalog__table
@@ -280,7 +417,7 @@ html
                         td
                             | Материал
                         td
-                            | дуб
+                            | ель сушеная 10%
                         td
                             | дуб
                         td
@@ -323,23 +460,23 @@ html
                             | Цена под ключ
                         td
                             small
-                                | 99 900 р.
+                                | 89 900 р.
                             b
-                                | 79 900 р.
+                                | 78 900 р.
+                            a.button.open-modal(href="#callback" data-theme="Заказать Мини")
+                                | Заказать
+                        td
+                            small
+                                | 94 900 р.
+                            b
+                                | 82 900 р.
                             a.button.open-modal(href="#callback" data-theme="Заказать Мини")
                                 | Заказать
                         td
                             small
                                 | 99 900 р.
                             b
-                                | 79 900 р.
-                            a.button.open-modal(href="#callback" data-theme="Заказать Мини")
-                                | Заказать
-                        td
-                            small
-                                | 99 900 р.
-                            b
-                                | 79 900 р.
+                                | 90 900 р.
                             a.button.open-modal(href="#callback" data-theme="Заказать Мини")
                                 | Заказать
         .help.block
