Добавил описание модальной формы

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -937,6 +937,8 @@ html
             form.modal__form
                 .modal__form-title
                     |Заказать звонок
+                .modal__form-desc
+                    |Какой то т екст описания
                 input(name="theme" type="hidden" value="")
                 input(name="name" placeholder="Введите ваше имя" class="input input--name")
                 input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
