--- a/sass/style.scss
+++ b/sass/style.scss
@@ -885,6 +885,11 @@ input {
       color: #000;
       text-align: center;
     }
+    &-desc {
+      margin: 15px auto 0 auto;
+      font-size: 22px;
+      text-align: center;
+    }
     p {
       text-align: left;
       label {
