--- a/sass/style.scss
+++ b/sass/style.scss
@@ -896,6 +896,12 @@ input {
         font-size: 14px;
         cursor: pointer;
       }
+      b {
+        display: block;
+        font-size: 15px;
+        padding: 10px 20px 10px 20px;
+        font-weight: 600;
+      }
       span {
         display: block;
         font-size: 14px;
