--- a/sass/style.scss
+++ b/sass/style.scss
@@ -497,7 +497,8 @@ input {
       position: relative;
       img {
         display: block;
-        width: 100%;
+        margin: 0 auto;
+        height: auto;
       }
     }
     &-desc {
