--- a/jade/index.jade
+++ b/jade/index.jade
@@ -9,6 +9,35 @@ html
         title.
             Бани-бочки под ключ по всей России
     body
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+(function (d, w, c) {
+(w[c] = w[c] || []).push(function() {
+    try {
+        w.yaCounter37865080 = new Ya.Metrika({
+            id:37865080,
+clickmap:true,
+trackLinks:true,
+accurateTrackBounce:true,
+webvisor:true
+});
+} catch(e) { }
+});
+
+var n = d.getElementsByTagName("script")[0],
+s = d.createElement("script"),
+f = function () { n.parentNode.insertBefore(s, n); };
+s.type = "text/javascript";
+s.async = true;
+s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+if (w.opera == "[object Opera]") {
+    d.addEventListener("DOMContentLoaded", f, false);
+} else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/37865080" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
         .main
             .container
                 .main__top
@@ -22,8 +51,8 @@ html
                                 br
                                 |бань-бочек по всей России
                     .main__contacts
-                        -var tel = '8 (495) ХХХ-90-54'
-                        a.main__contacts-tel(href="tel: #{tel}")
+                        -var tel = '8 (495) 532-77-40'
+                        a.main__contacts-tel(href="tel:84955327740")
                             |#{tel}
                         br
                         a.main__contacts-modal.open-modal(href="#callback" data-theme="Заказать звонок")
@@ -2026,7 +2055,7 @@ html
                         .scheme__item-img
                             img(src="img/step1.jpg")
                         .scheme__item-text
-                            |Вы звоните или оставляете
+                            |Вы звоните <br>8 (495) 532-77-40 или оставляете
                             br
                             a.open-modal(href="#callback" data-theme="Оставить заявку")
                                 |заявку на сайте
@@ -2085,7 +2114,7 @@ html
                     dt.faq__item-quest
                         |1. Можно ли самостоятельно собрать баню-бочку?
                     dd.faq__item-answer
-                        |Да, вы можете заказать комплект для самостоятельной сборки. Он стоит на 10 000 - 20 000 руб. дешевле, чем баня-бочка под ключ. Узнайте цену комплекта по телефону: 8 (495) xxx 83 73.
+                        |Да, вы можете заказать комплект для самостоятельной сборки. Он стоит на 10 000 - 20 000 руб. дешевле, чем баня-бочка под ключ. Узнайте цену комплекта по телефону: 8 (495) 532-77-40.
                     dt.faq__item-quest
                         | 2. Какая технология сборки бани-бочки?
                     dd.faq__item-answer
@@ -2133,15 +2162,15 @@ html
                     dt.faq__item-quest
                         | 13. Как заказать?
                     dd.faq__item-answer
-                        | Позвоните по телефону +7 (495) xxx-67-47, или оставьте заявку на сайте, и первый освободившийся специалист свяжется с вами.
+                        | Позвоните по телефону 8 (495) 532-77-40, или оставьте заявку на сайте, и первый освободившийся специалист свяжется с вами.
                     dt.faq__item-quest
                         | 14. Сколько это стоит?
                     dd.faq__item-answer
-                        | Наша компания подберет для вас оптимальное решение и предложит 3 различных варианта под ваши требования. Стоимость бани-бочки колеблется от 79 000 рублей до 196 000 рублей (в зависимости от заявленных требований). Кроме того, у нас постоянно проходят различные акции, узнать о которых вы можете позвонив по телефону +7 (495) ччч-67-47.
+                        | Наша компания подберет для вас оптимальное решение и предложит 3 различных варианта под ваши требования. Стоимость бани-бочки колеблется от 79 000 рублей до 196 000 рублей (в зависимости от заявленных требований). Кроме того, у нас постоянно проходят различные акции, узнать о которых вы можете позвонив по телефону 8 (495) 532-77-40.
                     dt.faq__item-quest
-                        | 15. Где посмотреть готовую бани-бочку?
+                        | 15. Где посмотреть готовую баню-бочку?
                     dd.faq__item-answer
-                        | Вы можете лично посмотреть готовую баню-бочку на выставочной площадке по адресу: г. Москва, ул. Енисейская дом 1, строение 1 (м. Свиблово). Просмотр осуществляется по предварительной записи по тел.: 8 (495) ххх-47-32
+                        | Вы можете лично посмотреть готовую баню-бочку на выставочной площадке по адресу: г. Москва, ул. Енисейская дом 1, строение 1 (м. Свиблово). Просмотр осуществляется по предварительной записи по <br>тел.: 8 (495) 532-77-40
                     dt.faq__item-quest
                         | 16. Как быстро остывает баня-бочка?
                     dd.faq__item-answer
@@ -2193,8 +2222,8 @@ html
                     br
                     |Есть вопросы? Звоните!
                     br
-                    a.footer__tel(href="tel:84951156747")
-                        |8 (495) XXX-67-47
+                    a.footer__tel(href="tel:84955327740")
+                        |8 (495) 532-77-40
                     br
                     a.open-modal(href="#callback" data-theme="Заказать звонок")
                         |Заказать звонок
